# ray-whisper

./: .gitignore  Dockerfile  app.py  pyproject.toml  ray_config.yaml  requirements.txt
ray/: Chart.yaml  values.yaml
ray/templates/: NOTES.txt  _helpers.tpl  ray_cluster.yaml  ray_service.yaml
